# apps/server/src/modules/auth/controllers/permission-admin.controller.ts
@@ -14,7 +14,8 @@ import { CreatePermissionDto } from '../dto/create-permission.dto';
 import { PoliciesGuard } from '../guards/permissions.guard';
 import { CaslAbilityFactory } from '../casl/casl-ability.factory';
 import { Action, Subject } from '../entities/permission.entity';
-import { RequirePermission } from '@/core/decorators';
+import { RequirePermission, VoTransform } from '@/core/decorators';
+import { PermissionVo } from '../vo';
 
 @ApiTags('admin', '权限管理')
 @Controller('admin/permissions')
@@ -27,32 +28,36 @@ export class PermissionAdminController {
 
   @Post()
   @ApiOperation({ summary: '创建权限' })
-  @ApiResponse({ status: 201, description: '权限创建成功' })
+  @ApiResponse({ status: 201, description: '权限创建成功', type: PermissionVo })
   @RequirePermission(Action.MANAGE, Subject.PERMISSION)
+  @VoTransform({ voClass: PermissionVo })
   create(@Body() createPermissionDto: CreatePermissionDto) {
     return this.permissionService.create(createPermissionDto);
   }
 
   @Get()
   @ApiOperation({ summary: '获取所有权限' })
-  @ApiResponse({ status: 200, description: '获取权限列表成功' })
+  @ApiResponse({ status: 200, description: '获取权限列表成功', type: [PermissionVo] })
   @RequirePermission(Action.READ, Subject.PERMISSION)
+  @VoTransform({ voClass: PermissionVo })
   findAll() {
     return this.permissionService.findAll();
   }
 
   @Get(':id')
   @ApiOperation({ summary: '根据ID获取权限' })
-  @ApiResponse({ status: 200, description: '获取权限成功' })
+  @ApiResponse({ status: 200, description: '获取权限成功', type: PermissionVo })
   @RequirePermission(Action.READ, Subject.PERMISSION)
+  @VoTransform({ voClass: PermissionVo })
   findOne(@Param('id') id: string) {
     return this.permissionService.findOne(id);
   }
 
   @Patch(':id')
   @ApiOperation({ summary: '更新权限' })
-  @ApiResponse({ status: 200, description: '权限更新成功' })
+  @ApiResponse({ status: 200, description: '权限更新成功', type: PermissionVo })
   @RequirePermission(Action.MANAGE, Subject.PERMISSION)
+  @VoTransform({ voClass: PermissionVo })
   update(@Param('id') id: string, @Body() updatePermissionDto: Partial<CreatePermissionDto>) {
     return this.permissionService.update(id, updatePermissionDto);
   }
